    - CI config now installs ExtUtils::MakeMaker to a recent version,
      fixing an issue where prereqs weren't being installed (fixes #9)
    - Remove container from CI config, as containers only work on ubuntu
      (fixes #10)
    - Updated CI template, enabled ubuntu-latest, windows-latest and
      macos-latest, with coveralls.io support (closes #12)
    - 100% test coverage
    - Added move_distribution_files()
    - Finished t/50-full_run.t, goes through every function to create an
      entire distribution with all customizations in place. Can be used as a
      roadmap for a binary script
    - We now croak() if the new version sent into version_bump() is less
      than or equal to the current version (closes #14)
    - Add tests that compare a full run against a saved template
      distribution (closes #17)
    - Renamed distribution to Dist::Mgr and repo to dist-mgr (closes #18)
    - Renamed bump_version() to version_bump()
    - Renamed get_version_info() to version_info()
    - Added changes(), installs our custom Changes file
    - Added changes_date(), replaces the UNREL placeholder with today's date
      in preparation for release
    - Added changes_bump(), prepares the Changes file for a new development
      cycle
    - Added POD to FileData, added section for creating new file entries
      (closes #8)
    - FileData functions are no longer exported by default

0.04    2020-12-23
    - Last test CPAN release
    - Added git_ignore()
    - Added remove_unwanted_files()
    - Added init(), creates the actual distribution directory structure
    - Added support for Coveralls.io test coverage testing for ci_github()

0.03    2020-12-22
    - Test release
    - Added ci_github()
    - Added ci_badges()
    - Added manifest_skip()

0.02    2020-12-22
    - Added add_repository() and add_bugtracker()
    - This is another formatting check on MetaCPAN

0.01    2020-12-22
    - Initial release; Much more to add, just checking POD formatting etc.