@@ -39,6 +39,10 @@ Revision history for Dist-Mgr
     - Added POD to FileData, added section for creating new file entries
       (closes #8)
     - FileData functions are no longer exported by default
+    - Added make_test()
+    - Added git_release(), _git_commit(), _git_push(), _validate_git()
+    - Added export tag 'private', exports certain private functions
+    - Added tests for git functions
 
 0.04    2020-12-23
     - Last test CPAN release
